Add text in profile

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 									<li>Create test cases and checklist</li>
 									<li>Defects reporting, tracking and verification</li>
 									<li>Prioritization and estimation of assigned tasks</li>
+									<li>Presentation and demo of delivered tasks for clients</li>
 								</ul>
 							</section>
 							<section class="employment-history">
