Add some text in profile

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 									<li>Defects reporting, tracking and verification</li>
 									<li>Prioritization and estimation of assigned tasks</li>
 									<li>Presentation and demo of delivered tasks for clients</li>
+									<li>Some text</li>
 								</ul>
 							</section>
 							<section class="employment-history">
