--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 									<li>Prioritization and estimation of assigned tasks</li>
 									<li>Presentation and demo of delivered tasks for clients</li>
 									<li>Some text</li>
+									<li>Some text123</li>
 								</ul>
 							</section>
 							<section class="employment-history">
